--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <head>
         <meta charset = "UTF-8">
         <title>React App</title>
+        <link rel = "stylesheet" type = "text/css" href = "css/style.css">
         <!--<link href="styles/bootstrap/bootstrap.min.css" rel="stylesheet" />
         <link href="styles/bootstrap/bootstrap-theme.min.css" rel="stylesheet" />
         bootstrap js
